# net-downloader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
net_downloader/: __init__.py  client.py  exceptions.py  utils.py
sessions/: session-ses_3b19.md  session-ses_3b1b.md  session-ses_3b1d.md  session-ses_3b1e.md  session-ses_3b20.md  session-ses_3b22.md
tests/: __init__.py  test_client.py  test_pdf.py  test_utils.py
